Improve 'no liquidity' error message
